--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="display-table-cell">
 			<div class="slider-content">
 				<i class="small-icon icon icon-star"></i>
-				<h5 class="date">2019.5.10</h5>
+				<h5 class="date">내용을 바꿨어용</h5>
 				<h3 class="pre-title">피아니스트 김슬기 독주회</h3>
 				<h1 class="title">"I love Romantic era"</h1>
 			</div><!-- slider-content-->
